脚本更改为定时执行

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,19 @@
 ; 用户名
 username=20xxxxxx
 ; 密码
-password=xxxxxxxx
+password=QUxxxxxx
 [config]
-; 用来测试网络连通性并跳转到登录系统的网站，必须是http协议
-test_url=http://www.baidu.com
+; 用来测试网络连通性并跳转到登录系统的网站
+test_url=www.baidu.com
+; 检查网络状态的间隔时间，单位秒
+check_interval=10
+[log]
+; 日志级别 INFO, ERROR
+log_level=INFO
+
+; 日志文件路径
+; 本人使用双系统，所以设置了两个路径
+; 如果没有设置，则默认为当前文件夹
+log_path_windows=
+log_path_linux=
+
